# Aneurysm-Detection-And-segMentation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  EXAMPLES.md  LICENSE  Makefile  README.md  REPOSITORY_SETUP.md  SECURITY.md  SERVER_OPTIMIZATION_GUIDE.md  UNIFIED_USAGE.md  USAGE.md  data_org.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_unified.txt  unified_benchmark.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml
benchmark_results/: README.md  benchmark_results.json  benchmark_summary.txt
configs/: benchmark_config.yaml  research_grade_config.yaml  server_optimized_config.yaml
data/: README.md  __init__.py  augmentation.py  dataset.py  optimized_dataset.py  preprocessing.py  utils.py
data/ADAM_release_subjs/10001/10001/orig/: ScanParams_struct.json  reg_struct_to_TOF.txt
data/ADAM_release_subjs/10002/10002/orig/: ScanParams_TOF.json  reg_struct_to_TOF.txt
docs/: index.md
evaluation/: __init__.py  benchmark.py
models/: __init__.py  enhanced_models.py  factory.py  lightweight_unet3d.py  multi_scale.py  nnu_net.py  swin_unetr.py  transformer_models.py  unet.py  unetr.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_training.py
training/: __init__.py  losses.py  metrics.py
utils/: __init__.py  helpers.py  io.py  memory_manager.py  setup.py  visualization.py
